crates/llvmkit-ir/tests/compile_fail/saved_function_handle_requires_unverified_token.stderr
error[E0382]: borrow of moved value: `module`
  --> tests/compile_fail/saved_function_handle_requires_unverified_token.rs:14:30
   |
 4 |     Module::with_new::<_, _, _>("saved-function", |module| {
   |                                                    ------ move occurs because `module` has type `Module<'_, Brand<'_>>`, which does not implement the `Copy` trait
...
13 |         let _verified = module.verify()?;
   |                                -------- `module` moved due to this method call
14 |         function.set_linkage(&module, Linkage::Internal);
   |                              ^^^^^^^ value borrowed here after move
   |
note: `Module::<'ctx, B>::verify` takes ownership of the receiver `self`, which moves `module`
  --> src/module.rs
   |
   |     pub fn verify(self) -> IrResult<Module<'ctx, B, Verified>> {
   |                   ^^^^
